add single element page

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <body>
     
-    <header th:fragment="header" class="container d-flex justify-content-between gap-3 align-items-baseline">
+    <header th:fragment="header" class="container d-flex justify-content-between gap-3 align-items-baseline px-5 pt-2">
         <h1>PIZZERIA CRUD</h1>
         <nav>
             <ul class="d-flex list-unstyled gap-4">
-                <li><a>Home</a></li>
-                <li><a>Mostra Tutte le Pizze</a></li>
-                <li><a>Mostra Singola Pizza</a></li>
+                <li><a href="/pizze">Home</a></li>
             </ul>
         </nav>
     </header>
