add create page (toFix)
When form is submitted, index page cannot convert id param [Resolved [org.springframework.web.method.annotation.MethodArgumentTypeMismatchException: Method parameter 'id': Failed to convert value of type 'java.lang.String' to required type 'java.lang.Integer'; For input string: 'index']]

--- a/src/main/resources/templates/pizze/show.html
+++ b/src/main/resources/templates/pizze/show.html
@@ -28,7 +28,7 @@
 
 
         <div th:unless="${pizza} != null">
-            <div>No Pizza 4 u</div>
+            <div>No Pizza Found</div>
         </div>
     </div>
         
