add update form

--- a/src/main/resources/templates/pizze/edit.html
+++ b/src/main/resources/templates/pizze/edit.html
@@ -4,12 +4,11 @@
     <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 <body>
-
-    <header th:replace="~{fragments/header :: header}"></header>
     
+    <header th:replace="~{fragments/header :: header}"></header>
 
     <main class="container">
-        <form method="post" th:action="@{/pizze/create}" id="pizza-form" th:object="${pizza}">
+        <form method="post" th:action="@{/pizze/edit/{id}(id = ${pizza.id})}" id="pizza-form" th:object="${pizza}">
             <ul th:if="${#fields.hasErrors()}">
                 <li th:each="err : ${#fields.allErrors()}" th:text="${err}" class="invalid-feedback"></li>
             </ul>
@@ -24,14 +23,10 @@
             <label for="price">Prezzo in Euro: </label>
             <input type="number" min="0" max="999" id="price" th:field="*{price}" required>
 
-            <button type="submit">Invia</button>
+            <button type="submit">Update</button>
 
         </form>
-
     </main>
-
-
-
 
 </body>
 </html>
