--- a/src/main/resources/templates/pizze/index.html
+++ b/src/main/resources/templates/pizze/index.html
@@ -19,14 +19,16 @@
                     <div class="fs-4">Descrizione: [[*{description}]]</div>
                     <div class="fs-4">Prezzo: €[[*{price}]]</div>
 
-                    <a th:href="|/pizze/edit/*{id}|">Modifica</a>
-                    <form action="#" method="post" th:action="@{pizze/delete/{id}(id=*{id})}">
-                        <button>Elimina</button>
-                    </form>
+                    <div class="d-flex gap-3 my-4">
+                        <a th:href="|/pizze/edit/*{id}|" class="btn btn-primary">Modifica</a>
+                        <form action="#" method="post" th:action="@{pizze/delete/{id}(id=*{id})}">
+                            <button class="btn btn-danger">Elimina</button>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="col-4 text-end">
-                    <img class="img-fluid" th:src="@{*{photoUrl}}" alt="">
+                    <img class="img-fluid" th:src="@{*{photoUrl}}" alt="Pizza img">
                 </div>
             </div>
             <hr>
